user id改為較短版本 未來可以輸入id對戰(?)

--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,8 @@
     "method-override": "latest",
     "express-session": "latest",
     "socket.io": "latest",
-    "request": "latest"
+    "request": "latest",
+    "shortid": "latest"
   },
   "scripts": {
     "start": "node server.js"
