--- a/Server/package.json
+++ b/Server/package.json
@@ -10,7 +10,7 @@
     "passport.socketio" : "latest",
     "mongoose" : "latest",
     "passport" : "latest",
-    "passport-local" : "latest",
+    "passport-custom": "latest",
     "morgan": "latest",
     "body-parser": "latest",
     "cookie-parser": "latest",
