server增加了一些防呆

--- a/Server/package.json
+++ b/Server/package.json
@@ -18,7 +18,8 @@
     "express-session": "latest",
     "socket.io": "latest",
     "request": "latest",
-    "shortid": "latest"
+    "shortid": "latest",
+    "lokijs": "latest"
   },
   "scripts": {
     "start": "node server.js"
