--- a/Server/docker/docker-compose.yml
+++ b/Server/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     environment:
       MONGO_ADDR: "db"
+    depends_on:
+      - db
     labels:
       - "traefik.enable=true"
       - "traefik.frontend.rule=Host:battle-master.gmin.tk"
